# simply-plural-to-any-updater

./: .dockerignore  .gitignore  AGENTS.md  COPYING  Cargo.toml  GEMINI.md  README.md  TASK.md  TASKS.md  TODO.md  Tauri.toml  build.rs  lint.sh
.cargo/: config.toml
.github/actions/build-test-lint/: action.yml
.github/workflows/: release.yml  test.yaml  update-dependencies.yml
.sqlx/: query-6d89af94e45413b607e1a2671a6b27553ff32b45d42c92942c6ffcb2e499286a.json  query-71e03999a165428971e08404522701eb0d68edac9127a173651900bb6072f65f.json  query-aff4088438eb2436009cbf2720154604e5327208789c7631ea564ffb20538da1.json  query-e409f92f318599926f8d26f41e5b021f350191627ae44609c8f485e063fc6dda.json
base-src/: Cargo.toml  build.rs
base-src/src/: clock.rs  communication.rs  communication_tests.rs  lib.rs  license.rs  meta.rs  platforms.rs  updater.rs  users.rs
bridge-frontend/: .prettierignore  index.html  package-lock.json  package.json  tsconfig.json  wdio.conf.js
bridge-frontend/e2e-tests/: app.e2e.ts
bridge-frontend/src/: license.ts  main.ts  pluralsync.bindings.ts  router.ts  sp2any.bindings.ts  style.css  types.ts  variant-info.ts
bridge-frontend/src/pages/: login-page.ts  start-page.ts  status-page.ts
bridge-src-tauri/: Cargo.toml  tauri.conf.json
bridge-src-tauri/capabilities/: default.json
bridge-src-tauri/src/: discord_bridge.rs  lib.rs  local_storage.rs  main.rs  never.rs  streaming.rs
db/: init.sql
dev/: codebase-size.sh  tauri-build.sh  tauri-dev.sh
docker/: api.Dockerfile  docker.compose.yml  frontend.Dockerfile  license-info-short.html  license-info-short.txt  license-info.html  license-info.txt  local-release.env  local.compose.yml  local.env  local.start.sh  local.stop.sh  nginx.conf.template  prod.env  rust-binary.Dockerfile  source.sh  start.sh  stop.sh  template.nginx.conf
docker/migrations/: 001_init_scheme.sql  002_example.sql  003_enable_website.sql  004_member_privacy.sql  005_member_privacy_buckets.sql  006_set_defaults.sql  007_set_existing_to_defaults.sql  008_website_url_name_unique.sql  009_add_pluralkit_sync.sql  010_add_use_pluralkit_name_to_users.sql  010_remove_wait_seconds_and_request_timeout.sql  011_delete_users_with_empty_email_and_add_constraint.sql
frontend/: .prettierignore  README.md  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  wdio.conf.ts
frontend/e2e-tests/: app.e2e.ts
frontend/src/: App.vue  jwt.ts  pluralsync.bindings.ts  pluralsync_api.ts  router.ts  simply_plural_api.ts  sp2any.bindings.ts  sp2any_api.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: Config.vue  DiscordAuthButton.vue  Home.vue  LicenseInfo.vue  Login.vue  Logout.vue  Start.vue  Status.vue
patched/: activity.rs.patch  discord_ipc.rs.patch
release/: ci-install-dependencies.sh  clean.sh  lint.sh  release-build.sh  update-dependencies.sh
release/patched/: .gitignore
sp2any_macros/src/: lib.rs
src/: communication.rs  config.rs  fronting_status.rs  lib.rs  main.rs  meta.rs  meta_api.rs  metrics.rs  setup.rs  simply_plural.rs  vrchat_status.rs  webserver.rs
src-tauri/: Cargo.toml
src/database/: constraints.rs  queries.rs  secrets.rs
src/gui/: index.html  mod.rs  tauri.conf.json  tauri_log_layer.rs
src/plurality/: deserialization.rs  fronting_status.rs  fronting_status_tests.rs  metrics.rs  mod.rs  pluralkit.rs  simply_plural.rs  simply_plural_model.rs  simply_plural_websocket.rs
src/updater/: api.rs  bridge_api.rs  change_processor.rs  manager.rs  mod.rs  platforms.rs  work_loop.rs
src/users/: auth.rs  config.rs  config_api.rs  config_macro.rs  jwt.rs  mod.rs  model.rs  user_api.rs
steps/: 01-clean.sh  02-update-dependencies.sh  03-audit.sh  03-install-dependencies.sh  04-audit.sh  10-lint.sh  11-prepare-sqlx.sh  12-backend-cargo-build.sh  13-frontend-npm-dev.sh  13-run-pluralsync-global-manager.sh  13-run-sp2any-global-manager.sh  15-frontend-generate-bindings.sh  17-frontend-npm-build.sh  20-bridge-frontend-tauri-dev.sh  22-bridge-frontend-tauri-release.sh  30-build-release.sh  31-start-local-release.sh  32-publish-release.sh  40-get-sp-events.sh  41-process-sp-events.sh  90-codebase-size.sh  91-build-time-analysis.sh  92-update-dependencies.sh
test/: .gitignore  bridge.integration-tests.sh  bridge.needs-backend.integration-tests.sh  ensure-vrchat-cookie-available.dev.sh  frontend.integration-tests.sh  frontend.needs-backend.integration-tests.sh  get-new-vrchat-cookie.dev.sh  manager.integration-tests.sh  plural_system_to_test.sh  restarts.integration-tests.sh  source.sh  start-backend-for-bridge-frontend.sh  startup.integration-tests.sh  unit-tests.sh  updater.integration-tests.sh  vrchat.integration-tests.sh  vrcupdater.integration-tests.sh  webserver.integration-tests.sh
