[package]
name = "sp2any"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"

[[bin]]
name = "sp2any"
path = "src/main.rs"

[[bin]]
name = "ts-bindings"
path = "src/bin/ts-bindings.rs"

[lib]

[dependencies]
chrono = { version = "*", features = ["serde"] }
either = "*"
anyhow = "*"
encoding_rs = "*"
serde = { version = "*", default-features = false, features = ["derive"] }
serde_json = { version = "*", default-features = false }
vrchatapi = "*"
html-escape = "*"
tokio = { version = "*", default-features = false, features = [] }
tokio-util = { version = "*", default-features = false }
log = "*"
env_logger = "*"
sqlx = { version = "*", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "chrono",
    "uuid",
    "macros",
] }
reqwest = { version = "*", default-features = false, features = [
    "json",
    "cookies",
    "rustls-tls",
] }
strum_macros = "*"
argon2 = "*"
jsonwebtoken = { version = "*", default-features = false, features = [
    "rust_crypto",
] }
rand = "*"
sha2 = "*"
rocket = { version = "*", default-features = false, features = [
    "json",
    "http2",
] }
specta = { version = "*", default-features = false, features = [
    "serde",
    "typescript",
    "export",
] }
specta-typescript = "*"
rocket_cors = { version = "*", default-features = false }
rocket_ws = "*"
# using later version to ensure same cookie_store is used as in reqwest
reqwest_cookie_store = { version = "0.8", features = ["serde"] }
base64 = "*"
async-scoped = { version = "*", features = ["use-tokio"] }
prometheus = "*"
rocket_prometheus = "*"
once_cell = "*"
