[package]
name = "sp2any-bridge"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
anyhow = "1"
sp2any = { path = ".." }
directories = "5"
reqwest-eventsource = "0.6"
futures = "0.3"
discord-rich-presence = { path = "../target/discord-rich-presence-patched" }
chrono = "0.4"
