[package]
name = "sp2any-bridge"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"

[lib]
name = "sp2any_bridge"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "*", features = [] }

[dependencies]
serde_json = "*"
serde = { version = "*", features = ["derive"] }
log = "*"
tokio = { version = "*", features = ["full"] }
tauri = { version = "*", features = [] }
tauri-plugin-log = "*"
reqwest = { version = "*", features = ["json", "rustls-tls"] }
anyhow = "*"
sp2any = { path = ".." }
directories = "*"
reqwest-eventsource = "*"
futures = "*"
discord-rich-presence = { path = "../target/discord-rich-presence-patched" }
chrono = "*"
tokio-tungstenite = "*"
