[package]
name = "sp2any-bridge"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"

[lib]
name = "sp2any_bridge"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "*", features = [] }

[dependencies]
sp2any-base = { path = "../base-src" }
serde_json = "*"
serde = { version = "*", default-features = false, features = ["derive"] }
log = "*"
tokio = { version = "*", default-features = false }
tauri = { version = "*", default-features = true, features = [] }
tauri-plugin-log = "*"
reqwest = { version = "*", default-features = false, features = [
    "json",
    "rustls-tls",
] }
anyhow = "*"
directories = "*"
reqwest-eventsource = "*"
futures = "*"
discord-rich-presence = { path = "../target/discord-rich-presence-patched" }
chrono = "*"
tokio-tungstenite = { version = "*", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "connect",
    "handshake",
] }
